# tracing

./: .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  scrape_etslink.py  scrape_t18.py
.github/: copilot-instructions.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: DataViewer.jsx  LogViewer.jsx  LoginForm.jsx
src/: __init__.py  main.py
src/parser/: __init__.py  html_parser.py  selectors.py
src/scraper/: __init__.py  async_scraper.py  base.py  session_scraper.py
src/storage/: __init__.py  csv_storage.py  json_storage.py
src/utils/: __init__.py  helpers.py  rate_limiter.py
tests/: __init__.py  test_parser.py  test_storage.py  test_utils.py
